chores: add font-swap to ensure text remians visible during webfont load, test with index tag

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
       url("/assets/fonts/aller_bd-webfont.svg#allerbold") format("svg");
     font-weight: normal;
     font-style: normal;
+    font-display: swap;
   }
   /* roboto-300 - latin */
   @font-face {
@@ -31,6 +32,7 @@
       url("/assets/fonts/roboto-v20-latin-regular.woff2") format("woff2"),
       /* Chrome 26+, Opera 23+, Firefox 39+ */
         url("/assets/fonts/roboto-v20-latin-regular.woff") format("woff"); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+    font-display: swap;
   }
 
   @font-face {
@@ -39,6 +41,7 @@
       url("/assets/fonts/roboto-black-webfont.woff") format("woff");
     font-weight: 900;
     font-style: normal;
+    font-display: swap;
   }
 
   @font-face {
